Cria rota de put, patch e delete.

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
-- Tratar erro 404 no get de planeta
-- Criar método de Put de planeta
-- Criar método de Delete de planeta
-- Apresentar id do planeta (sem ele fica impossivel acessar o restante da api)
+- Criar serializer de planeta
 - Hospedar APi
 - Cache de acesso ao swapi
 - Autenticação
+- Ver problema com unique
