Adiciona paginação na rota de get planets

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
-- Hospedar APi
+- Post, Put devem ser em json
+- NGINX na frente da API
 - Paginação
 - Autenticação
 - Ver problema com unique
+- Documentar cache simple
